[gd_scene load_steps=7 format=3 uid="uid://bjkm6ximd4nus"]

[ext_resource type="Script" uid="uid://dtij50yl4tfg1" path="res://player/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://b5if6cd5wxbpt" path="res://player/third_person_spring.gd" id="2_rkbax"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bu0v1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oul6g"]

[sub_resource type="BoxMesh" id="BoxMesh_rkbax"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_4flbx")

[node name="first_person_cam" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_bu0v1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_sh265")

[node name="third_person_spring" type="SpringArm3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_oul6g")
script = ExtResource("2_rkbax")

[node name="third_person_cam" type="Camera3D" parent="third_person_spring"]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 0.6, 0, 1.5, -0.29999998)
mesh = SubResource("BoxMesh_rkbax")
